SampleNetworkCrossStack.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  AWS CloudFormation Sample Template VPC_with_PublicIPs_And_DNS: Sample template
  that creates a VPC with DNS and public IPs enabled. Note that you are billed
  for the AWS resources that you use when you create a stack from this template.
Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      CidrBlock: 10.0.0.0/16
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 373bcfdd-6dab-44c7-813d-44468162e82e
  PublicSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.0.0/24
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 5629e327-10fe-4080-b334-1858e474a283
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: bd8d4a81-4a01-42ae-82ac-f8449bf72bc2
  VPCGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 4aec9973-a6a3-416a-adca-cef97cc11be1
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 4b39635a-bf0b-4c56-90b5-b618e9e09531
  PublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 6f882e95-30d2-44a8-9bec-01740d463bcc
  PublicSubnetRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable
    Metadata:
      'AWS::CloudFormation::Designer':
        id: e99c0425-4921-4711-81fc-f952a5f2d287
  PublicSubnetNetworkAclAssociation:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet
      NetworkAclId: !GetAtt 
        - VPC
        - DefaultNetworkAcl
  WebServerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable HTTP ingress
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
    Metadata:
      'AWS::CloudFormation::Designer':
        id: b9c9d758-d5c9-4fd6-88a8-10c2cb555755
Outputs:
  VPCId:
    Description: VPC ID
    Value: !Ref VPC
    Export:
      Name: !Sub '${AWS::StackName}-VPCID'
  PublicSubnet:
    Description: The subnet ID to use for public web servers
    Value: !Ref PublicSubnet
    Export:
      Name: !Sub '${AWS::StackName}-SubnetID'
  WebServerSecurityGroup:
    Description: The security group ID to use for public web servers
    Value: !GetAtt 
      - WebServerSecurityGroup
      - GroupId
    Export:
      Name: !Sub '${AWS::StackName}-SecurityGroupID'
Metadata:
  'AWS::CloudFormation::Designer':
    bd8d4a81-4a01-42ae-82ac-f8449bf72bc2:
      size:
        width: 60
        height: 60
      position:
        x: -70
        'y': -10
      z: 1
      embeds: []
    373bcfdd-6dab-44c7-813d-44468162e82e:
      size:
        width: 510
        height: 370
      position:
        x: 60
        'y': 90
      z: 1
      embeds:
        - b9c9d758-d5c9-4fd6-88a8-10c2cb555755
        - 4b39635a-bf0b-4c56-90b5-b618e9e09531
        - 5629e327-10fe-4080-b334-1858e474a283
    b9c9d758-d5c9-4fd6-88a8-10c2cb555755:
      size:
        width: 60
        height: 60
      position:
        x: 390
        'y': 360
      z: 2
      parent: 373bcfdd-6dab-44c7-813d-44468162e82e
      embeds: []
      iscontainedinside:
        - 373bcfdd-6dab-44c7-813d-44468162e82e
    4b39635a-bf0b-4c56-90b5-b618e9e09531:
      size:
        width: 240
        height: 240
      position:
        x: 90
        'y': 150
      z: 2
      parent: 373bcfdd-6dab-44c7-813d-44468162e82e
      embeds:
        - 6f882e95-30d2-44a8-9bec-01740d463bcc
      iscontainedinside:
        - 373bcfdd-6dab-44c7-813d-44468162e82e
    4aec9973-a6a3-416a-adca-cef97cc11be1:
      source:
        id: 373bcfdd-6dab-44c7-813d-44468162e82e
      target:
        id: bd8d4a81-4a01-42ae-82ac-f8449bf72bc2
    6f882e95-30d2-44a8-9bec-01740d463bcc:
      size:
        width: 60
        height: 60
      position:
        x: 120
        'y': 210
      z: 3
      parent: 4b39635a-bf0b-4c56-90b5-b618e9e09531
      embeds: []
      isassociatedwith:
        - bd8d4a81-4a01-42ae-82ac-f8449bf72bc2
      iscontainedinside:
        - 4b39635a-bf0b-4c56-90b5-b618e9e09531
      dependson:
        - 4aec9973-a6a3-416a-adca-cef97cc11be1
    5629e327-10fe-4080-b334-1858e474a283:
      size:
        width: 150
        height: 150
      position:
        x: 390
        'y': 150
      z: 2
      parent: 373bcfdd-6dab-44c7-813d-44468162e82e
      embeds: []
      iscontainedinside:
        - 373bcfdd-6dab-44c7-813d-44468162e82e
    e99c0425-4921-4711-81fc-f952a5f2d287:
      source:
        id: 4b39635a-bf0b-4c56-90b5-b618e9e09531
      target:
        id: 5629e327-10fe-4080-b334-1858e474a283
